upgraded map-controller and puzzle-controller

--- a/public/templates/map.handlebars
+++ b/public/templates/map.handlebars
@@ -1,3 +1,4 @@
+<div class="container"> <!-- or container-fluid -->
 {{#each this}} 
 {{#if isLocked}}
 <button class="level locked" id="{{id}}">{{id}}</button>
@@ -5,3 +6,6 @@
 <button class="level" id="{{id}}">{{id}}</button>
 {{/if}}
 {{/each}}
+</div>
+
+<!-- logout button-->
