--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,35 @@
 #root {
     height: 300px;
-    background-color: black;
-    color: white;
+ 
     text-align: center;    
 }
 
 #root#warning {
     font-size: 25px;
+}
+
+.level{
+    width: 30px;
+    height: 30px;
+    border: 1px solid black;
+}
+
+.cell{
+    width: 30px;
+    height: 30px;
+    border: 1px solid black;
+}
+.close{
+    background-color: grey;
+}
+.mark{
+    border: 2px solid blue;
+}
+#endgame-message{
+    position:absolute;
+    width:300px;
+    height:300px;
+    background-color:red;
+    left:20%;
+    top:20%;   
 }
