passport session login register routes

--- a/public/templates/login.handlebars
+++ b/public/templates/login.handlebars
@@ -9,6 +9,5 @@
         <input  id="input-password" type="password">
     </label>
     <br />
-    <a class="btn btn-login" href="#/map">Log in</a>
-    <a class="btn btn-" href="#/register">Register</a>
+    <button id="btn-login">Log in</button>
 </div>
