--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,10 @@ body {
     padding-top: 30px;
 }
 
+#root{
+	padding: 10px;
+}
+
 .panel-login {
 	border-color: #ccc;
 	-webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
@@ -56,7 +60,6 @@ body {
 }
 
 #map{	
-	margin-top: 100px;
 	list-style: none;
 	width: 250px;
     display: flex;
@@ -134,34 +137,52 @@ body {
 
 .mine{
 	background-image: url('./images/bomb.jpg');
-	 background-size: 50px ;
-	 	background-repeat: no-repeat;
+	background-size: 50px ;
+	background-repeat: no-repeat;
 }
+
 .row{
 	display: flex;
 }
+
 #endgame-message{ 
+	padding: 10px;
 	position : absolute;
    	left : 20%;
    	top : 20%;
    	width :350px;
     height : 350px;
-	background-image: url('./images/sad-ninja.jpg');
-	background-size: 350px;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-   background-position: 160px 5px; 
 }
 
-#endgame-message span{
+#endgame-message span{	
 	display: block;
 	font-size: 22px;
 	color: red;
 	margin: 10px;
 }
 
-#endgame-message button{
-margin: 100px;
+#endgame-message a{	
+	width: 100px;
+	background-color: #4da6ff;
+	color: #4d4d4d;
+	margin: 100px;
+}
+
+#endgame-message img{
+	position: absolute;
+	z-index: -1;
+	width: 350px;
+}
+
+.mark{
+	background-image: url('./images/flag.png');
+	background-size: 50px ;
+	background-repeat: no-repeat;
+}
+
+.disabled{
+	pointer-events: none;
+    opacity: 0.4;
 }
 
 
