--- a/public/templates/map.handlebars
+++ b/public/templates/map.handlebars
@@ -2,7 +2,7 @@
     <!-- or container-fluid -->
     <div class="form-group">
         <div class="col-sm-6 col-sm-offset-3">
-             <a href="#/logout" class="btn btn-logout" ><span class="glyphicon glyphicon-log-out"></span> Log Out</a>
+             <a href="#" class="btn btn-logout" ><span class="glyphicon glyphicon-log-out"></span> Log Out</a>
         </div>
     </div>
     <ul id="map">
