--- a/public/templates/puzzle.handlebars
+++ b/public/templates/puzzle.handlebars
@@ -1,23 +1,23 @@
-<div class="container">
-        <div class="row">
-            <div id='power'>
-                <span id="total-points">{{points}}</span>/<span id="current-points">{{points}}</span></div>
-            {{#each rowMinesCount}}
-            <div class="initialize-col">{{this}}</div>
-            {{/each}}
-        </div>
-
-        {{#each field}}
-        <div class="row">
-             <div class="initialize-row">{{lookup ../colMinesCount @index}}</div>
-            {{#each this}}
-            <div class='cell close'></div>
-            {{/each}}
-        </div>
+<div class="container" oncontextmenu="return false;">
+    <div class="row">
+        <div id='power'>
+            <span id="total-points">{{points}}</span>/<span id="current-points">{{points}}</span></div>
+        {{#each rowMinesCount}}
+        <div class="initialize-col">{{this}}</div>
         {{/each}}
-
     </div>
-    <a class="btn btn-logout" href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Log Out</a>
+
+    {{#each field}}
+    <div class="row">
+        <div class="initialize-row">{{lookup ../colMinesCount @index}}</div>
+        {{#each this}}
+        <div class='cell close'></div>
+        {{/each}}
+    </div>
+    {{/each}}
+ <a id="quit-game" class="btn btn-logout" href="#/map"><span class="glyphicon glyphicon-log-out"></span>Quit Game</a>
+</div>
+
 
 
 <!--buton for high score or just to show high score
