style fix, puzzle-controller fix, added share on facebook

--- a/public/templates/login.handlebars
+++ b/public/templates/login.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
 			<div class="panel panel-login">
@@ -30,7 +30,7 @@
 								<div class="form-group">
 									<div class="row">
 										<div class="col-sm-6 col-sm-offset-3">
-											<a id="btn-login" class="btn btn-login" href="#"><span class="glyphicon glyphicon-log-in"></span>Log in</a>
+											<a id="btn-login" class="btn btn-login" href="#"><button class="btn btn-md btn-success btn-block" type="submit">Login</button> </a>
 										</div>
 									</div>
 								</div>
@@ -60,7 +60,7 @@
 								<div class="form-group">
 									<div class="row">
 										<div class="col-sm-6 col-sm-offset-3">
-											<a id="btn-register"  class="btn btn-register" href="#"><span class="glyphicon glyphicon-user"></span> Register</a>
+											<a id="btn-register"  class="btn btn-register" href="#"><button class="btn btn-md btn-success btn-block" type="submit"> Register</button></a>
 											
 										</div>
 									</div>
