--- a/public/templates/map.handlebars
+++ b/public/templates/map.handlebars
@@ -1,25 +1,21 @@
 <div class="container">
     <!-- or container-fluid -->
-    <div class="form-group">
-        <div class="col-sm-6 col-sm-offset-3">
-             <a href="#" class="btn btn-logout" ><span class="glyphicon glyphicon-log-out"></span> Log Out</a>
-        </div>
+    <div>
+        <a id="btn-logout" class="btn btn-logout" href="#"><button class="btn btn-md btn-danger btn-block" type="submit">Log Out</button> </a>
     </div>
     <ul id="map">
         {{#each this}} {{#if isLocked}}
         <li>
             <div>
-                <img src="./css/images/level-disabled.png" class="level disabled" id="{{id}}" /> {{id}}
+                <img src="./css/images/level-disabled.png" class="level disabled" id="{{level}}" />Level {{level}}
             </div>
         </li>
         {{else}}
         <li>
             <div>
-                <img src="./css/images/level.png" class="level active" id="{{id}}" /> {{id}}
+                <img src="./css/images/level.png" class="level active" id="{{level}}" />Level {{level}}
             </div>
         </li>
         {{/if}} {{/each}}
     </ul>
 </div>
-
-<!-- logout button-->
