--- a/public/templates/login.handlebars
+++ b/public/templates/login.handlebars
@@ -16,7 +16,7 @@
 				<div class="panel-body">
 					<div class="row">
 						<div class="col-lg-12">
-							<form id="login-form" role="form" style="display: block;">
+							<form id="login-form" method="post" role="form" style="display: block;">
 								<div class="form-group">
 									<input type="text" name="username" id="username-log" tabindex="1" class="form-control" placeholder="Username" value="">
 								</div>
@@ -44,7 +44,7 @@
 										</div>
 									</div> -->
 							</form>
-							<form id="register-form" style="display: none;">
+							<form id="register-form" method="post" style="display: none;">
 								<div class="form-group">
 									<input type="text" name="username" id="username-reg" tabindex="1" class="form-control" placeholder="Username" value="">
 								</div>
