--- a/public/templates/puzzle.handlebars
+++ b/public/templates/puzzle.handlebars
@@ -30,7 +30,7 @@
                 {{#each scores}}
                 <tr>
                     <td>{{username}}</td>
-                    <td>{{points}}</td>
+                    <td>{{score}}</td>
                 </tr>
                 {{/each}}
             </tbody>
