--- a/public/templates/login.handlebars
+++ b/public/templates/login.handlebars
@@ -18,10 +18,10 @@
 						<div class="col-lg-12">
 							<form id="login-form" role="form" style="display: block;">
 								<div class="form-group">
-									<input type="text" name="username" id="username-log" tabindex="1" class="form-control" placeholder="Username" value="">
+									<input type="text" id="username-log" tabindex="1" class="form-control" placeholder="Username" value="">
 								</div>
 								<div class="form-group">
-									<input type="password" name="password" id="password-log" tabindex="2" class="form-control" placeholder="Password">
+									<input type="password" id="password-log" tabindex="2" class="form-control" placeholder="Password">
 								</div>
 								<!--	<div class="form-group text-center">
 										<input type="checkbox" tabindex="3" class="" name="remember" id="remember">
@@ -52,10 +52,10 @@
 									<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
 								</div>
 								<div class="form-group">
-									<input type="password" name="password" id="password-reg" tabindex="2" class="form-control" placeholder="Password">
+									<input type="password" id="password-reg" tabindex="2" class="form-control" placeholder="Password">
 								</div>
 								<div class="form-group">
-									<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+									<input type="password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
 								</div>
 								<div class="form-group">
 									<div class="row">
