--- a/public/templates/login.handlebars
+++ b/public/templates/login.handlebars
@@ -46,10 +46,10 @@
 							</form>
 							<form id="register-form" style="display: none;">
 								<div class="form-group">
-									<input type="text" name="username" id="username-reg" tabindex="1" class="form-control" placeholder="Username" value="">
+									<input type="text" id="username-reg" tabindex="1" class="form-control" placeholder="Username" value="">
 								</div>
 								<div class="form-group">
-									<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
+									<input type="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
 								</div>
 								<div class="form-group">
 									<input type="password" id="password-reg" tabindex="2" class="form-control" placeholder="Password">
@@ -60,8 +60,7 @@
 								<div class="form-group">
 									<div class="row">
 										<div class="col-sm-6 col-sm-offset-3">
-											<a id="btn-register"  class="btn btn-register" href="#"><button class="btn btn-md btn-success btn-block" type="submit"> Register</button></a>
-											
+											<a id="btn-register" class="btn btn-register" href="#"><button class="btn btn-md btn-success btn-block" type="submit"> Register</button></a>
 										</div>
 									</div>
 								</div>
